--- a/documentation/docs/intro.mdx
+++ b/documentation/docs/intro.mdx
@@ -3,3 +3,6 @@ sidebar_position: 1
 ---
 # Introduction
 
+This system aims to provide enhanced security for navy personel working with 
+3D printers. As it stands their are many vulrabilities within the navy's 
+3D printing pipeline, our product mains to reduce such vulrabilities. 
